test_files/netlist_connected/invalid/invalid_06_line_3.net
V1 drain 0 12
V2 gate 0 -2
J1 drain gate source 2N3819
R1 drain 0 1k
.tran 1m
.backanno
.end
